--- a/medlegal/web/Admin/plantillaAdmin.xhtml
+++ b/medlegal/web/Admin/plantillaAdmin.xhtml
@@ -33,7 +33,7 @@
                     <h:outputText value="#{hora.fecha}" style="color: #65859F; font-weight: bolder"/>
                 </div>
                 <div class="usuario">
-                    <h:outputText value="#{usuario.usuarioNombre}" style="color: #65859F; font-weight: bolder"/>
+                    <h:outputText value="#{usuarioActivo.usuarioNombre}" style="color: #65859F; font-weight: bolder"/>
                 </div>
             </div>
             <h:form id="fmenu">
