--- a/medlegal/web/Admin/agregarRiesgo.xhtml
+++ b/medlegal/web/Admin/agregarRiesgo.xhtml
@@ -20,23 +20,23 @@
                     <p:overlayPanel id="datos" for="agregar" hideEffect="fade" style="background-color: scrollbar">
                         <p:panelGrid columns="2">
                             <h:outputLabel value="Nombre del Riesgo*" />
-                            <p:inputText id="nombre" value="#{riesgoBean.nombre}" required="true" label="nombre"/>
+                            <p:inputText id="nombre" value="#{riesgoBean.nombre}" required="true" label="Nombre"/>
                             <h:outputLabel value="Descripcion del Riesgo*" />
-                            <p:inputText id="descripcion" value="#{riesgoBean.descripcion}" required="true" label="descripcion"/>
+                            <p:inputText id="descripcion" value="#{riesgoBean.descripcion}" required="true" label="Descripcion"/>
                             <h:outputLabel value="Seleccione la clasificacion *" />
-                            <p:selectOneMenu value="#{riesgoBean.idclasificacion}" style="width: 180px" rendered="true">
+                            <p:selectOneMenu value="#{riesgoBean.idclasificacion}" style="width: 180px" rendered="true" label="clasificacion">
                                 <f:selectItem itemLabel="Seleccione Clasificacion" noSelectionOption="true"/>
                                 <f:selectItems value="#{riesgoBean.listadoClasificacion()}" var="cla"                                               
                                                itemLabel="#{cla.descclasificacion}" itemValue="#{cla.idclasificacion}"/>
                             </p:selectOneMenu>
                             <h:outputLabel value="Seleccione el enfoque       *" />
-                            <p:selectOneMenu value="#{riesgoBean.enfoque}" style="width: 180px" required="true">
+                            <p:selectOneMenu value="#{riesgoBean.enfoque}" style="width: 180px" required="true" label="Enfoque">
                                 <f:selectItem itemLabel="Seleccione Enfoque" noSelectionOption="true"/>
                                 <f:selectItems value="#{riesgoBean.listadoEnfoque()}" var="enfo"
                                                itemLabel="#{enfo.descenfoque}" itemValue="#{enfo.idenfoque}"/>
                             </p:selectOneMenu>
                             <h:outputLabel value="Seleccione el tipo       *" />
-                            <p:selectOneMenu value="#{riesgoBean.idtipo}" style="width: 180px" required="true">
+                            <p:selectOneMenu value="#{riesgoBean.idtipo}" style="width: 180px" required="true" label="Tipo">
                                 <f:selectItem itemLabel="Seleccione Tipo" noSelectionOption="true"/>
                                 <f:selectItems value="#{riesgoBean.listadoTipo()}" var="tipo"
                                                itemLabel="#{tipo.desctiporiesgo}" itemValue="#{tipo.idtipo}"/>
@@ -46,7 +46,7 @@
                         </p:panelGrid>
                         <br/>
                     </p:overlayPanel>
-                    <p:messages closable="true" showDetail="true"/>
+                    <p:messages closable="true" showSummary="true"/>
                     <p:dataTable var="ries" value="#{riesgoBean.riesgoLista()}" id="riesgoList" editable="true" 
                                  paginator="true" rows="12"  
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"  
